# ai-assignment

./: .env_example  README.md  error.py  history_quiz_generator.py  main.py  math_quiz_generator.py  pyproject.toml  quiz_generator.py  readme.txt  requirements.txt
