[tool.poetry]
name = "ai-assignment"
version = "0.1.0"
description = ""
authors = ["hsiehpinghan <thank.hsiehpinghan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
langchain = "0.1.0"
langchain-community = "0.0.10"
langchain-core = "0.1.11"
langchain-experimental = "0.0.49"
langchain-openai = "0.0.2"
openai = "1.7.0"
pydantic = "2.3.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
